--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A brochure site about Insights Canada -- a collaborative effort by Canada's mathematical sciences institutes.">
+    <meta name="author" content="James Colliander">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Insights Canada</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Insights Canada</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,10 +56,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#partners">Partners</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#funding">Funding</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -74,10 +74,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1>Insights Canada</h1>
+                <p>Mathematical sciences talent helping businesses find solutions.</p>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Ready for Eureka?</a>
             </div>
         </div>
     </header>
@@ -86,58 +86,113 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Expertise in Data and Computing.</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Launched by the mathematical sciences institutes, Insights Canada facilitates collaboration for businesses with scientists and students in research universities.</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section id="partners">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Your Solution Partners</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="partners-box">
+                        <img src="img/portfolio/aarmslogo.png" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
+                        <!-- <h3>AARMS</h3> -->
+                        <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="partners-box">
+                        <img src="img/portfolio/BIRS_logo_initials.png" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i> -->
+                        <!-- <h3>BIRS</h3> -->
+                        <!-- <p class="text-muted">You can use this theme as is, or you can make changes!</p> -->
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="partners-box">
+                        <img src="img/portfolio/canssi_logo.png" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i> -->
+                        <!-- <h3>CANSSI</h3> -->
+                        <!-- <p class="text-muted">We update dependencies to keep things fresh.</p> -->
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="partners-box">
+                        <img src="img/portfolio/crm_logo.png" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
+                        <!-- <h3>Fields</h3> -->
+                        <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="partners-box">
+                         <img src="img/portfolio/fields_logo.jpg" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i> -->
+                        <!-- <h3>NSERC</h3> -->
+                        <!-- <p class="text-muted">We update dependencies to keep things fresh.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="partners-box">
+                        <img src="img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i> -->
+                        <!-- <h3>PIMS</h3> -->
+                        <!-- <p class="text-muted">You have to make your websites with love these days!</p> -->
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="funding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Your Funding Partners</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 text-center">
+                    <div class="funding-box">
+                        <img src="img/portfolio/NSERC.png" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
+                        <!-- <h3>AARMS</h3> -->
+                        <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 text-center">
+                    <div class="funding-box">
+                        <img src="img/portfolio/mitacs1.png" class="wow bounceIn" alt="">
+                        <!-- <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i> -->
+                        <!-- <h3>BIRS</h3> -->
+                        <!-- <p class="text-muted">You can use this theme as is, or you can make changes!</p> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
@@ -233,13 +288,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <aside class="bg-dark">
+    <aside class="bg-primary">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <!-- <h2>Free Download at Start Bootstrap!</h2> -->
+                <a href="#" class="btn btn-default btn-xl wow tada">Find Solutions.</a>
             </div>
         </div>
     </aside>
@@ -250,7 +305,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Ready to explore a collaboration? Give us a call or send us an email and we will get back to you as soon as possible.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
@@ -258,7 +313,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">contact@insightscanada.com</a></p>
                 </div>
             </div>
         </div>
