--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">learn@insightscanada.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">learn@insightscanada.org</a></p>
                 </div>
             </div>
         </div>
