--- a/index.html
+++ b/index.html
@@ -87,7 +87,24 @@
                 <h1>Insights Canada</h1>
                 <p>Mathematical sciences talent helping businesses find solutions.</p>
                 <hr>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Ready for Eureka?</a>
+                <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Ready for Eureka?</a> -->
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h3 class="section-heading">Ready for Eureka?</h3>
+            <br>
+            <div class="col-xs-4 col-md-offset-4 text-center">
+                <form action="https://formspree.io/learn@insightscanada.org " method="POST">
+                    <fieldset class="form-group">
+                        <input type="text" class="form-control" id="exampleInputPassword1" name="name" placeholder="Your name">
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input type="email" class="form-control form-control-lg" name="_replyto" id="exampleInputEmail1" placeholder="Your email" >
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <textarea class="form-control" id="exampleTextarea" rows="3" name="message" placeholder="Your message"></textarea>
+                    </fieldset>
+                        <input type="submit" value="Send" class="btn btn-primary btn-xl page-scroll">
+                </form>
             </div>
         </div>
     </header>
@@ -101,7 +118,7 @@
                     <h2 class="section-heading">Analytics, Optimization, Algorithms</h2>
                     <hr class="light">
                     <p class="text-faded">Launched by the mathematical and statistical sciences institutes, Insights Canada matches businesses with scientists and students in research universities to solve problems.</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
                 </div>
             </div>
         </div>
@@ -120,24 +137,24 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="partners-box">
-                        <img src="img/portfolio/aarmslogo.png" class="wow bounceIn" alt="">
-                        <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
+                        <img src="img/portfolio/aarmslogo.png" class="wow zoomIn" alt="">
+                        <!-- <i class="fa fa-4x fa-diamond wow zoomIn text-primary"></i> -->
                         <!-- <h3>AARMS</h3> -->
                         <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="partners-box">
-                        <img src="img/portfolio/canssi_logo.png" class="wow bounceIn" alt="">
-                        <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
+                        <img src="img/portfolio/canssi_logo.png" class="wow zoomIn" alt="">
+                        <!-- <i class="fa fa-4x fa-diamond wow zoomIn text-primary"></i> -->
                         <!-- <h3>Fields</h3> -->
                         <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="partners-box">
-                         <img src="img/portfolio/crm_logo.png" class="wow bounceIn" alt="">
-                        <!-- <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i> -->
+                         <img src="img/portfolio/crm_logo.png" class="wow zoomIn" alt="">
+                        <!-- <i class="fa fa-4x fa-newspaper-o wow zoomIn text-primary" data-wow-delay=".2s"></i> -->
                         <!-- <h3>NSERC</h3> -->
                         <!-- <p class="text-muted">We update dependencies to keep things fresh.</p> -->
                     </div>
@@ -148,16 +165,16 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 text-center">
                     <div class="partners-box">
-                        <img src="img/portfolio/fields_logo.jpg" class="wow bounceIn" alt="">
-                        <!-- <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i> -->
+                        <img src="img/portfolio/fields_logo.jpg" class="wow zoomIn" alt="">
+                        <!-- <i class="fa fa-4x fa-newspaper-o wow zoomIn text-primary" data-wow-delay=".2s"></i> -->
                         <!-- <h3>CANSSI</h3> -->
                         <!-- <p class="text-muted">We update dependencies to keep things fresh.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 text-center">
                     <div class="partners-box">
-                        <img src="img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow bounceIn" alt="">
-                        <!-- <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i> -->
+                        <img src="img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow zoomIn" alt="">
+                        <!-- <i class="fa fa-4x fa-heart wow zoomIn text-primary" data-wow-delay=".3s"></i> -->
                         <!-- <h3>PIMS</h3> -->
                         <!-- <p class="text-muted">You have to make your websites with love these days!</p> -->
                     </div>
@@ -179,16 +196,16 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 text-center">
                     <div class="funding-box">
-                        <img src="img/portfolio/NSERC.png" class="wow bounceIn" alt="">
-                        <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
+                        <img src="img/portfolio/NSERC.png" class="wow zoomIn" alt="">
+                        <!-- <i class="fa fa-4x fa-diamond wow zoomIn text-primary"></i> -->
                         <!-- <h3>AARMS</h3> -->
                         <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 text-center">
                     <div class="funding-box">
-                        <img src="img/portfolio/mitacs1.png" class="wow bounceIn" alt="">
-                        <!-- <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i> -->
+                        <img src="img/portfolio/mitacs1.png" class="wow zoomIn" alt="">
+                        <!-- <i class="fa fa-4x fa-paper-plane wow zoomIn text-primary" data-wow-delay=".1s"></i> -->
                         <!-- <h3>BIRS</h3> -->
                         <!-- <p class="text-muted">You can use this theme as is, or you can make changes!</p> -->
                     </div>
@@ -196,6 +213,15 @@
             </div>
         </div>
     </section>
+
+      <aside class="bg-primary">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <!-- <h2>Free Download at Start Bootstrap!</h2> -->
+                <a href="#" class="btn btn-default btn-xl wow tada">Find Solutions.</a>
+            </div>
+        </div>
+    </aside>
 <!-- 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
@@ -294,16 +320,9 @@
         </div>
     </section> -->
 
-    <aside class="bg-primary">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <!-- <h2>Free Download at Start Bootstrap!</h2> -->
-                <a href="#" class="btn btn-default btn-xl wow tada">Find Solutions.</a>
-            </div>
-        </div>
-    </aside>
 
-    <section id="contact">
+
+    <!-- <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -312,16 +331,16 @@
                     <p>Ready to explore a collaboration? Give us a call or send us an email and we will get back to you as soon as possible.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
+                    <i class="fa fa-phone fa-3x wow zoomIn"></i>
                     <p>123-456-6789</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <i class="fa fa-envelope-o fa-3x wow zoomIn" data-wow-delay=".1s"></i>
                     <p><a href="mailto:learn@insightscanada.org">learn@insightscanada.org</a></p>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
