update index file

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
+                <!-- <p>Mathematical sciences talent helping businesses find solutions.</p> -->
                 <h1>Insights Canada</h1>
-                <p>Mathematical sciences talent helping businesses find solutions.</p>
                 <hr>
                 <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Ready for Eureka?</a> -->
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h3 class="section-heading">Ready for Eureka?</h3>
+                    <h3 class="section-heading">Is your business ready for eureka?</h3>
             <br>
             <div class="col-xs-4 col-md-offset-4 text-center">
                 <form action="https://formspree.io/learn@insightscanada.org " method="POST">
