--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h3 class="section-heading">Is your business ready for eureka?</h3>
             <br>
-            <div class="col-xs-4 col-md-offset-4 text-center">
+            <div class="col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4 text-center">
                 <form action="https://formspree.io/learn@insightscanada.org " method="POST">
                     <fieldset class="form-group">
                         <input type="text" class="form-control" id="exampleInputPassword1" name="name" placeholder="Your name">
