--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+title: Insights Canada
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -46,14 +49,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Insights Canada</a>
+                <a class="navbar-brand page-scroll" href="/">Insights Canada</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
+            {% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a{% if location == '/success/'%}class="active"{% endif %} href="success/">Success Stories</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#partners">Partners</a>
