--- a/_pages/success/index.html
+++ b/_pages/success/index.html
@@ -1,6 +1,6 @@
 ---
 title: Insights Canada
-layout: default
+layout: success
 permalink: /success/
 ---
 
@@ -19,7 +19,7 @@ permalink: /success/
 <aside class="bg-primary">
     <div class="container text-center">
         <div class="call-to-action">
-            <a href="/#" class="btn btn-default btn-xl wow tada">Find Solutions.</a>
+            <a href="/#" class="btn btn-default btn-xl">Find Solutions.</a>
         </div>
     </div>
 </aside>
